# FFMpegDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/kylin/ffmpegdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/kylin/ffmpegdemo/: MainActivity.kt
app/src/test/java/com/kylin/ffmpegdemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
